--- a/posts/computer-tool/2024-08-18-setup-r-julia.qmd
+++ b/posts/computer-tool/2024-08-18-setup-r-julia.qmd
@@ -56,15 +56,23 @@ Symlink란 윈도의 바로가기라고 생각하면 된다.
 패키지 폴더의 위치는 다음과 같다. 
 
 - macOS: `/Users/anari/.julia/packages`
-- Linux:
+- Linux:  (homebrew를 썼다면) `/home/linuxbrew/.linuxbrew/bin/julia`
 
 ### VS Code 설정 
 
 Julia 익스텐션을 설치하고, `settings.json` 혹은 확장 설정에서 아래와 같이 설정하자. json 파일을 수정하는 대신 설정 화면에서 비슷한 내용을 찾아서 고쳐도 된다. 
 
 ```json 
-{
+"platformSettings.platforms": {
+  "win32": {
+    "julia.executablePath": ""
+  },
+  "darwin": {
     "julia.executablePath": "/opt/homebrew/bin/julia"
+  },   
+  "linux": {
+    "julia.executablePath": "/home/linuxbrew/.linuxbrew/bin/julia"
+  }
 }
 ```
 
@@ -93,15 +101,26 @@ Rig를 통해 R을 설치하자.
 
 #### Radian 
 
-Radian: Conda를 통해 radian을 설치하자. 메인 터미널 대신 활용할 앱니다. 
+Radian: Conda를 통해 radian을 설치하자. 메인 터미널 대신 활용할 앱이다. 그리고 Jupyter도 설치되어 있어야 한다. 그래야 VS Code에서 Jupyter 커널로 R을 부릴 수 있다. 
+
+```bash
+> conda install radian jupyter 
+```
 
 #### R packages 
 
 ```R
+# R 터미널에서 아래를 실행한다. 
+
 > install.packages("languageserver") # 랭귀지서버 설치한다. (그래야 vscode에서 에러 안 뜬다)
 > install.packages("devtools")
 > devtools::install_github("IRkernel/IRkernel") # Jupyter notebook에서 R을 사용하려면 설치한다.
+> IRkernel::installspec() # Jupyter 커널 활성화 
 ```
+
+:::{.column-margin}
+languageserver, devtools를 설치하는 과정에서 에러가 발생할 수 있다. 이 에러를 해결할 방법이 현재로서는 분명하지 않다. 이렇게 꼬였을 때는 WSL을 재설정하는 것이 답이다. 
+:::
 
 ### symlink
 
@@ -116,8 +135,8 @@ lrwxr-xr-x    1 root   admin       53  8 19 19:21 Rscript -> /Library/Frameworks
 
 라이브러리의 폴더의 위치는 다음과 같다. 
 
-- macOS: `/Users/anari/Library/R`
-- Linux: 
+- macOS: `~/Library/R`
+- WSL: `~/R/x86_64-pc-linux-gnu-library`  
 
 ### VS Code 설정 
 
