--- a/posts/computer-tool/2024-08-18-setup-r-julia.qmd
+++ b/posts/computer-tool/2024-08-18-setup-r-julia.qmd
@@ -99,13 +99,24 @@ Rig를 통해 R을 설치하자.
 
 우선 몇 가지 패키지부터 Conda와 R에 설치하도록 하자. 
 
-#### Radian 
+#### Radian and Conda 
 
 Radian: Conda를 통해 radian을 설치하자. 메인 터미널 대신 활용할 앱이다. 그리고 Jupyter도 설치되어 있어야 한다. 그래야 VS Code에서 Jupyter 커널로 R을 부릴 수 있다. 
 
 ```bash
 > conda install radian jupyter 
 ```
+
+#### 리눅스에 깔아야 할 것들 
+
+윈도나 맥처럼 패키지로 나오는 녀석들과 달리 리눅스에서 R을 구동하기 위해서는 여러가지 의존성 도구들을 OS에 설치해야 한다. 어떤 것들이 필요한지 파악하는 방법이 있다. R을 실행한 후 아래와 같이 명령어를 치자. 
+
+```r
+> pak::pkg_sysreqs("devtools")
+```
+
+명령어를 실행하면 어떤 도구를 깔아야 하는지 알려준다. 이 녀석들을 설치하도록 하자. 
+
 
 #### R packages 
 
@@ -140,7 +151,7 @@ lrwxr-xr-x    1 root   admin       53  8 19 19:21 Rscript -> /Library/Frameworks
 
 ### VS Code 설정 
 
-R extension을 깐다. 역시 터미널의 실행 파일 경로를 설정하면 되는데, 위 symlink 경로를 제시하면 된다. Jupyter의 경우 R에서 IRkernel을 설치했다면 쉽게 R 커널을 선택할 수 있을 것이다. 
+R extension을 깐다. 역시 터미널의 실행 파일 경로를 설정하면 되는데, 위 symlink 경로를 제시하면 된다. Jupyter의 경우 R에서 IRkernel을 설치하고 활성화했으면,Jupyter 커널 아래 R 커널을 택할 수 있다. 
 
 
 
