--- a/posts/computer-tool/2024-08-18-setup-r-julia.qmd
+++ b/posts/computer-tool/2024-08-18-setup-r-julia.qmd
@@ -20,17 +20,17 @@ format:
 
 ## Pixi는 쓰지 말자. 
 
-앞서 pixi로 R과 Julia를 세팅하는 [방법](https://blog.lostineconomics.com/posts/computer-tool/2024-04-03-r_with_pixi.html)을 소개했다. 하지만 그다지 쓸모가 있지는 않더라. 그래서 이번에는 직접 설치하는 방법을 정리한다. 
+앞서 pixi로 R과 Julia를 세팅하는 [방법](https://blog.lostineconomics.com/posts/computer-tool/2024-04-03-r_with_pixi.html)을 소개했다. 하지만 Python과 달리 Julia와 R에서는 pixi의 쓸모가 크지 않았다. 그래서 이번에는 직접 설치하는 방법을 정리한다. 직접 설치하면 단순하고 편리할 것 같지만, macOS나 리눅스에서는 딱히 그렇지 않다. 
 
 ## 전제 조건 
 
-아래와 같은 조건에서 활용한다. 
+여기 내용은 아래와 같은 조건에서 적용할 수 있다. 
 
 - OS는 Macos 또는 WSL-Ubuntu(WSL)를 사용한다.
 - R과 Julia를 설치하고자 한다.
 - VS Code에서 활용한다. 
 
-Julia와 R 모두 직접 설치하는 데 다소 애로사항이 있다. 다행히도 둘 모두 활용할 수 있는 전용 installer가 나와 있다. 이 녀석들을 쓰면 두 플랫폼 모두에서 쉽게 랭귀지를 설치하고, 제거하고 버전을 관리할 수 있다. 인스톨러를 쓰면 Pixi를 쓰고자 했던 원래의 의도를 살릴 수 있다.   
+Julia와 R 모두 직접 설치하는 데 다소 애로사항이 있다. 다행히도 둘 모두 활용할 수 있는 전용 installer가 나와 있다. 이 녀석들을 쓰면 두 플랫폼 모두에서 쉽게 랭귀지를 설치하고, 제거하고 버전을 관리할 수 있다. 인스톨러를 쓰면 pixi를 쓰고자 했던 원래의 의도를 살릴 수 있다.   
 
 ## Julia 
 
