--- a/posts/computer-tool/2024-08-18-setup-r-julia.qmd
+++ b/posts/computer-tool/2024-08-18-setup-r-julia.qmd
@@ -20,7 +20,7 @@ format:
 
 ## Pixi는 쓰지 말자. 
 
-앞서 pixi로 R과 Julia를 세팅하는 [방법](https://blog.lostineconomics.com/posts/computer-tool/2024-04-03-r_with_pixi.html)을 소개했다. 하지만 Python과 달리 Julia와 R에서는 pixi의 쓸모가 크지 않았다. 그래서 이번에는 직접 설치하는 방법을 정리한다. 직접 설치하면 단순하고 편리할 것 같지만, macOS나 리눅스에서는 딱히 그렇지 않다. 
+앞서 pixi로 R과 Julia를 세팅하는 [방법](https://blog.lostineconomics.com/posts/computer-tool/2024-04-03-r_with_pixi.html)을 소개했다. 하지만 Python과 달리 Julia와 R에서는 pixi의 쓸모가 크지 않았다. 그래서 이번에는 직접 설치하는 방법을 정리한다. 직접 설치하면 단순하고 편리할 것 같지만, macOS 터미널 설치나 리눅스에서는 딱히 그렇지 않다. 이 포스트를 남겨두는 까닭이다. 
 
 ## 전제 조건 
 
@@ -158,8 +158,7 @@ lrwxr-xr-x    1 root   admin       53  8 19 19:21 Rscript -> /Library/Frameworks
 
 ### VS Code 설정 
 
-R extension을 VS Code에 설치하자. 역시 R 터미널의 실행 파일 경로를 설정하면 되는데, 위 symlink 경로를 제시하면 된다. Jupyter의 경우 R에서 IRkernel을 설치하고 활성화했으면,Jupyter 커널 아래 R 커널을 택할 수 있다. 
-
+R extension을 VS Code에 설치하자. 역시 R 터미널의 실행 파일 경로를 설정하면 되는데, 위 symlink 경로를 제시하면 된다. Jupyter의 경우 R에서 IRkernel을 설치하고 활성화했다면, VS Code에서 Jupyter 커널 아래 R 커널을 택할 수 있다. 
 
 
 
