--- a/posts/computer-tool/2024-08-18-setup-r-julia.qmd
+++ b/posts/computer-tool/2024-08-18-setup-r-julia.qmd
@@ -18,7 +18,7 @@ format:
 
 - macOS와 Linux(WSL-Ubuntu)에서 Julia와 R을 세팅하는 방법을 알아보자. 
 
-## Pixi는 쓰지 말자. 
+## pixi는 쓰지 말자. 
 
 앞서 pixi로 R과 Julia를 세팅하는 [방법](https://blog.lostineconomics.com/posts/computer-tool/2024-04-03-r_with_pixi.html)을 소개했다. 하지만 Python과 달리 Julia와 R에서는 pixi의 쓸모가 크지 않았다. 그래서 이번에는 직접 설치하는 방법을 정리한다. 직접 설치하면 단순하고 편리할 것 같지만, macOS 터미널 설치나 리눅스에서는 딱히 그렇지 않다. 이 포스트를 남겨두는 까닭이다. 
 
