--- a/posts/computer-tool/2024-09-02-uv-ultimate-virtual-env.qmd
+++ b/posts/computer-tool/2024-09-02-uv-ultimate-virtual-env.qmd
@@ -1,6 +1,6 @@
 ---
 title: "uv, 궁극의 가상 환경" 
-description: "가상 환경은 이걸로 끝이다!"   
+description: "Python 가상 환경은 이걸로 끝이다!"   
 author: "JS HUHH"
 date: "09/02/2024"
 image: "./images/cat-virtual-env.webp"
@@ -20,8 +20,9 @@ format:
 
 ## 방황이 끝났다. 
 
-Python 환경의 가상 환경은 선택지가 여러 개이다. 여러 개의 선택지가 있는 것의 장점도 있다. 환경의 번화 및 기술 발전에 따라서 유연한 대응이 가능할 수 있기 떄문이다. 다만 (나 같은) 저급한 이용자 입장에서는 이 점이 혼란스러울 수 있다. 그냥 닥치고 선택할 수 있는 간편한 해결책이 있으면 싶었다. Rye, Pixi 모두 이런 시도의 일환이다. 둘 모두 설치 후 거의 CLI에서 거의 원스톱에 가깝게 무지성으로 쓸 수 있는 가상 환경이다. 다만 이 둘은 모두 conda에 의존하고 있다는 점에서 약간의 의구심 혹은 불편함이 있다. 그리고 Python 버전 3.12부터 [pyproject.toml](https://packaging.python.org/en/latest/guides/writing-pyproject-toml/)을 활용한 보다 체계적이고 편리한 패키지 설정이 되입되었다. 우리가 이용할 가상 환경도 같은 방향성 위에 구축된다면 이후의 호환성도 크게 염려하지 않아도 될 것이다. 
+Python 환경의 가상 환경은 선택지가 많다. 선택지가 많다는 게 꼭 나쁜 것은 아니다. 환경의 번화 및 기술 발전에 따라서 유연한 대응이 가능할 수 있기 떄문이다. 다만 (나 같은) 저급한 이용자 입장에서는 이 점이 혼란스러울 수 있다. 그냥 닥치고 선택할 수 있는 '간편한' 해결책이 있으면 싶었다. Rye, Pixi 모두 이런 시도의 일환이다. 둘 모두 설치 후 CLI에서 거의 원스톱에 가깝게 무지성으로 쓸 수 있는 좋은 가상 환경이다. 다만 이 둘은 모두 conda에 의존하고 있다는 점에서 살짝 거슬리는 대목이 있다. 그리고 Python 버전 3.12부터 [pyproject.toml](https://packaging.python.org/en/latest/guides/writing-pyproject-toml/)을 활용한 보다 체계적이고 편리한 패키지 설정이 도입되었다. 편리한 가상 환경이 이와 같은 방향성 위에 구축된다면 이후의 호환성도 크게 염려하지 않아도 될 것이다. 물론 설정이 복잡하면 안되고 이것저것 따로 깔아야 하는 것도 피하고 싶다. 예를 들어 Poetry의 경우 다재다능한 패키지 관리를 제공하면 가상 환경을 번들로 제공하지 않는다. 
 
+이 모든 조건과 요구를 만족시키는 가상 환경 + 패키지 관리 도구가 있을까? 있다. 바로 uv이다.
 
 ## 전제 조건 
 
