--- a/posts/computer-tool/2024-09-02-uv-ultimate-virtual-env.qmd
+++ b/posts/computer-tool/2024-09-02-uv-ultimate-virtual-env.qmd
@@ -18,19 +18,21 @@ format:
 
 - Python 가상 환경, 더 이상 헤매지 마세요. 
 
-## 방황이 끝났다. 
+## 방황은 끝났다. 
 
-Python 환경의 가상 환경은 선택지가 많다. 선택지가 많다는 게 꼭 나쁜 것은 아니다. 환경의 번화 및 기술 발전에 따라서 유연한 대응이 가능할 수 있기 떄문이다. 다만 (나 같은) 저급한 이용자 입장에서는 이 점이 혼란스러울 수 있다. 그냥 닥치고 선택할 수 있는 '간편한' 해결책이 있으면 싶었다. Rye, Pixi 모두 이런 시도의 일환이다. 둘 모두 설치 후 CLI에서 거의 원스톱에 가깝게 무지성으로 쓸 수 있는 좋은 가상 환경이다. 다만 이 둘은 모두 conda에 의존하고 있다는 점에서 살짝 거슬리는 대목이 있다. 그리고 Python 버전 3.12부터 [pyproject.toml](https://packaging.python.org/en/latest/guides/writing-pyproject-toml/)을 활용한 보다 체계적이고 편리한 패키지 설정이 도입되었다. 편리한 가상 환경이 이와 같은 방향성 위에 구축된다면 이후의 호환성도 크게 염려하지 않아도 될 것이다. 물론 설정이 복잡하면 안되고 이것저것 따로 깔아야 하는 것도 피하고 싶다. 예를 들어 Poetry의 경우 다재다능한 패키지 관리를 제공하면 가상 환경을 번들로 제공하지 않는다. 
+Python 환경의 가상 환경은 선택지가 많다. 선택지가 많다는 게 꼭 나쁜 것은 아니다. 환경의 번화 및 기술 발전에 따라서 유연한 대응이 가능할 수 있기 떄문이다. 다만 (나 같은) 저급한 이용자 입장에서는 이 점이 혼란스러울 수 있다. 그냥 닥치고 선택할 수 있는 '간편한' 해결책이 있으면 싶었다. Rye, Pixi 모두 이런 시도의 일환이다. 둘 모두 설치 후 CLI에서 거의 원스톱에 가깝게 무지성으로 쓸 수 있는 좋은 가상 환경이다. 다만 이 둘은 모두 conda에 의존하고 있다는 점에서 살짝 거슬리는 대목이 있다. 그리고 Python 버전 3.12부터 [pyproject.toml](https://packaging.python.org/en/latest/guides/writing-pyproject-toml/)을 활용한 보다 체계적이고 편리한 패키지 설정이 도입되었다. 편리한 가상 환경이 이와 같은 방향성 위에 구축된다면 이후의 호환성도 크게 염려하지 않아도 될 것이다. 물론 설정이 복잡하면 안되고 이것저것 따로 깔아야 하는 것도 피하고 싶다. 예를 들어 Poetry의 경우 다재다능한 패키지 관리를 제공하나 가상 환경을 번들로 제공하지 않는다. (물론 따로 까는게 어렵진 않지만, 역시 초보는 귀찮을 따름이고...)
 
-이 모든 조건과 요구를 만족시키는 가상 환경 + 패키지 관리 도구가 있을까? 있다. 바로 uv이다.
+이 모든 조건과 요구를 만족시키는 가상 환경 + 패키지 관리 도구가 있을까? 있다. 바로 uv이다. 이 모든 것을 갖추고도 정말 정말 빠르다! 
 
-## 전제 조건 
+[uv](https://github.com/astral-sh/uv)
+
+### 사용 조건 
 
 나는 주로 macOS와 WSL-Ubuntu를 이용한다. 이 글은 macOS와 WSL-Ubuntu를 기준으로 작성되었다. 윈도 역시 필요하다면 어렵지 않게 쓸 수 있으리라 짐작한다. (하지만 WSL을 쓸 수 있는 마당에 윈도에서 윈도 네이티브를 고집할 이유가 있을까...)
 
-## uv
+## Here Comes the uv!
 
-고맙게도 이런 용도/욕구에 딱 맞는 가상 환경이 등장했다. 바로 [uv](https://github.com/astral-sh/uv)가 그것이다. 패키지 전체가 Rust로 제작되어서 속도가 무지막지하게 빠르다. conda 같은 사설 패키지 저장소가 아니라 PyPI를 직접 활용해서 보다 편리하다. 예를 들어 한글 이용자라면 matplotlib에서 한글 폰트를 미리 설정해줘야 한다. 아주 번거롭지는 않지만 바쁠 때는 이마저 귀찮을 수 있다. koreanize-matplotlib 패키지는 나눔고딕폰트를 matplotlib의 기본 폰트로 설정해주는 간단한 패키지다. 이 녀석은 conda에는 없고 PyPI에만 있다. uv를 쓰면 이 패키지도 어럽제 않게 치할 수 있다.
+uv는 패키지 전체가 Rust로 제작되어서 속도가 무지막지하게 빠르다. conda 같은 사설 패키지 저장소가 아니라 PyPI를 직접 활용해서 때떄로 살짝 편리하다. 예를 들어 한글 이용자라면 matplotlib에서 한글 폰트를 미리 설정해줘야 한다. 아주 번거롭지는 않지만 바쁠 때는 이마저 귀찮을 수 있다. koreanize-matplotlib 패키지는 나눔고딕폰트를 matplotlib의 기본 폰트로 설정해주는 간단한 패키지다. 이 녀석은 conda에는 없고 PyPI에만 있다. uv를 쓰면 이 패키지도 어럽제 않게 치할 수 있다.
 
 :::{.column-margin}
 물론 Pixi나 Rye에서도 PyPI를 통해 패키지를 설치할 수 있다. 아주 번거롭지는 않지만 한번에 떠오르지 않을 때가 있다. 그래서 PyPI를 뼈대로 하는 uv 쪽이 살짝 더 편리하다. 
