--- a/posts/computer-tool/2024-09-02-uv-ultimate-virtual-env.qmd
+++ b/posts/computer-tool/2024-09-02-uv-ultimate-virtual-env.qmd
@@ -4,7 +4,7 @@ description: "Python 가상 환경은 이걸로 끝이다!"
 author: "JS HUHH"
 date: "09/02/2024"
 image: "./images/cat-virtual-env.webp"
-categories: [Python, virtual-env]
+categories: [computer-tool, python, virtual-env]
 #fig-align: center
 #jupyter: python3
 draft: false
