--- a/posts/computer-tool/2023-05-29-rye.qmd
+++ b/posts/computer-tool/2023-05-29-rye.qmd
@@ -4,7 +4,7 @@ description: 꽤 편리한 Python 가상 환경
 author: "JS HUHH"
 date: "05/29/2023"
 image: "./images/tool-cat-2.webp"
-categories: [computer-tool, coding]
+categories: [computer-tool, python, virtual-env, coding]
 #jupyter: python3
 draft: false
 ---
