--- a/posts/computer-tool/2024-09-02-uv-ultimate-virtual-env.qmd
+++ b/posts/computer-tool/2024-09-02-uv-ultimate-virtual-env.qmd
@@ -50,7 +50,7 @@ uv 개발진의 야심처럼 uv는 pip, pip-tools, pipx, poetry, pyenv, virtuale
 
 ### 프로젝트 초기화 및 복원 
 
-보다 상세하고 내용은 [공식 문서](https://docs.astral.sh/uv/)를 참고하자. 여기서는 내가 활용하는 간단한 사례를 소개하도록 한다. 이 역시 미래의 나 놈을 위한 것이다. 설치는 고민하지 말고 brew를 이용하자. brew 없이 까는 방법은 링크에 소개되어 있다. 
+보다 상세한 내용은 [공식 문서](https://docs.astral.sh/uv/)를 참고하자. 여기서는 내가 활용하는 간단한 사례를 소개하도록 한다. 이 역시 미래의 나 놈을 위한 것이다. 설치는 고민하지 말고 brew를 이용하자. brew 없이 까는 방법은 링크에 소개되어 있다. 
 
 ```bash
 > brew install uv 
