--- a/posts/computer-tool/2024-09-02-uv-ultimate-virtual-env.qmd
+++ b/posts/computer-tool/2024-09-02-uv-ultimate-virtual-env.qmd
@@ -59,16 +59,16 @@ uv 개발진의 야심처럼 uv는 pip, pip-tools, pipx, poetry, pyenv, virtuale
 ```bash 
 >  uv init . # 프로젝트 초기화
 > uv venv --python 3.12.0 # venv 조건 활성화 및 파이썬 설치  
-> uv add jupyter polars # pyproject.toml에 넣자. 
+> uv add jupyter polars # pyproject.toml에 해당 패키지 넣기 
 
 ----
 
-> un sync # pyproject.toml #내용 동기화 
+> un sync # pyproject.toml 내용 동기화 
 ```
 
 - 프로젝트를 초기화하고, venv를 통해 가상환경을 설치한다. 이떄 파이썬 버전을 지정할 수 있다. 
 - 필요한 패키지를 설치한다. `add` 명령을 활용하면 `pyproject.toml`에 추가된다.
-- 해당 프로젝트 디렉토리를 github 등을 통해 수입했다면, `uv sync`를 통해 `pyproject.toml`의 내용을 해당 로컬 머신이 설치할 수 있다. 
+- 해당 프로젝트 디렉토리를 github 등을 통해 수입했다면, `uv sync`를 통해 `pyproject.toml`의 내용을 해당 로컬 머신에 설치할 수 있다. 즉, 없거나 업데이트된 요소를 갱신하는 명령이다. 
 
 
 ### OS 특정 패키지 설치 
