--- a/posts/computer-tool/2023-11-03-first-thing-ubuntu.qmd
+++ b/posts/computer-tool/2023-11-03-first-thing-ubuntu.qmd
@@ -12,6 +12,7 @@ draft: false
 
 ## TL; DR
 우분투 설치하고 먼저 해야 할 일들을 정리해보자.   
+homebrew 설치 이후부터는 [LINK](https://blog.lostineconomics.com/posts/computer-tool/2024-09-05-first-thing-ubuntu-updated.html)를 참고하자. 
 
 ## 넋두리 
 WSL이 생기면서 윈도에서도 리눅스를 제대로 쓸 수 있게 되었다. 리눅스(아마도 우분투)를 쓸 일이 많아진 만큼, 우분투 설치하고 (내 기준에서) 해야 할 일을 정리해보려 한다. 물론 이 포스트 멀지 않은 미래에 모든 걸 까먹을 나 놈을 위한 것이다. 
