--- a/posts/computer-tool/2024-09-02-uv-ultimate-virtual-env.qmd
+++ b/posts/computer-tool/2024-09-02-uv-ultimate-virtual-env.qmd
@@ -70,6 +70,13 @@ uv 개발진의 야심처럼 uv는 pip, pip-tools, pipx, poetry, pyenv, virtuale
 - 필요한 패키지를 설치한다. `add` 명령을 활용하면 `pyproject.toml`에 추가된다.
 - 해당 프로젝트 디렉토리를 github 등을 통해 수입했다면, `uv sync`를 통해 `pyproject.toml`의 내용을 해당 로컬 머신에 설치할 수 있다. 즉, 없거나 업데이트된 요소를 갱신하는 명령이다. 
 
+가상환경 활성화는 venv와 동일하다. 
+
+```bash
+# 프로젝트 폴더에서 실행 
+> source .venv/bin/activate
+```
+
 
 ### OS 특정 패키지 설치 
 
