--- a/posts/computer-tool/2024-09-05-first-thing-ubuntu-updated.qmd
+++ b/posts/computer-tool/2024-09-05-first-thing-ubuntu-updated.qmd
@@ -21,6 +21,10 @@ draft: false
 
 앞서도 밝혔지만, brew로 할 수 있는 일이 있다면 다 brew로 하는 것이 좋다. 업데이트, 삭제, 설치 등의 관리가 온전하게 이루어지기 때문이다. (나는 매년 일정 액수를 brew에 기부한다.) brew로 깔아야 하는 것들의 목록을 살펴보고 필요한 몇 가지를 설명하도록 하자. 
 
+:::{.column-margin}
+macOS의 경우 cask 옵션을 통해서 GUI 앱도 설치할 수 있다. Linux의 경우 이보다는 못하지만 그래도 유용한 패키지 관리툴이다. 
+:::
+
 | 패키지 이름 | 용도 |
 |--------------|-------------|
 | fzf     | 퍼지 서치. zoxide가 활용한다. |
