--- a/posts/computer-tool/2024-09-02-uv-ultimate-virtual-env.qmd
+++ b/posts/computer-tool/2024-09-02-uv-ultimate-virtual-env.qmd
@@ -64,13 +64,15 @@ uv 개발진의 야심처럼 uv는 pip, pip-tools, pipx, poetry, pyenv, virtuale
 > uv init . # 상위 폴더에 프로젝트가 있을 경우 해당 프로젝트 하위로 초기화 
 ```
 
+- 만일 필요한 패키지를 그대로 해당 프로젝트(폴더) 아래 들어가기를 원한다면 다음의 사항을 살펴보자. 해당 프로젝트 상위 폴더에 `pyproject.toml`이 있다면 여기 설정의 문제를 일으킬 수 있다. 이를 지워주자. 
+
 ```bash 
 > uv venv --python 3.12.0 # venv 조건 활성화 및 파이썬 설치  
 > uv add jupyter polars # pyproject.toml에 해당 패키지 넣기 
 
 ----
 
-> un sync # pyproject.toml 내용 동기화 
+> uv sync # pyproject.toml 내용 동기화 
 ```
 
 - 프로젝트를 초기화하는 두 가지 방식이 있다. 만일 해당 폴더를 워크스페이스에 소속시키지 않는다면 `--no-workspace` 옵션을 넣어주면 된다. 어딘가 워크 스페이스에 소속이 되어 있다면 그냥 `uv init .`을 실행하면 된다. 
