--- a/posts/stats-simple/2024-02-28-baysian-trick.qmd
+++ b/posts/stats-simple/2024-02-28-baysian-trick.qmd
@@ -1,11 +1,11 @@
 ---
 title:  베이즈 정리의 응용 
-description: "어떤 내용을 검토해야 할까?"
+description: "좋은 사례를 살펴보자"
 author: "JS HUHH"
 date: "01/06/2025"
 image: "./images/cat-stat.png"
 categories: [statistics, stats-simple]
-draft: true
+draft: false
 ---
 
 ## TL; DR
@@ -30,4 +30,86 @@ P(A|B) = \underbrace{\frac{P(B|A)}{P(B)}}_{(*)} {P(A)}
 
 간단한 예를 들어보자. $A$는 "갑돌이가 범인"이라는 사건이고, $B$는 범행 현장의 유전자 감식 결과 감돌이의 유전자가 식별된 사건이라고 하자. 보통 유전자 감식의 정확도는 99.999999%라고 하자. 이때 $B$라는 사건의 발생이 갑돌이가 범인일 확률을 얼마나 확정할까? 위 식에서 보면 애초에 갑돌이가 범인이 되는 사건의 확률 $P(A)$가 중요하다. 증거에 따른 업데이트 부분 $(*)$이 굉장히 큰 값이라고 해도, $P(A)$의 값이 충분히 0에 가깝다면 $P(A|B)$의 값은 여전히 작을 것이다.
 
+:::{.column-margin}
+극단적인 예를 들어보자. 만일 갑돌이가 10년 전에 죽은 인물이라면? 이때 $P(A)$는 0이다. 그렇다면 $P(A|B)$는 어떻게 될까? 위 식에서 보면, $P(B|A)$가 1에 가깝다고 해도 $P(A|B)$는 0이다.
+:::
+
 또 하나 기억해야 하는 사실이 있다. 당연하지만, $P(A|B) \neq P(B|A)$이다. 식으로 보면 자명하지만 자연어 진술 속에서는 의외로 이 사실이 무시되고는 한다. 
+
+## 베이즈 정리의 함정 I
+
+톰 치버스의 "모든 것이 예측 가능하다"에 베이즈 정리를 쉽게 무기로 활용될 수 있는 사례를 소개하고 있다. 코로나 때의 일화이다. 코로나 면역을 검사할 수 있는 새로운 항체 검사가 등장했다고 하자. 두 검사의 민감도(sensitivity)와 특이도(specificity)는 모두 95%이다. 검사의 결과가 높은 수치이므로, 이런 주장을 펼칠 수 있다. 이 검사를 통해 면역을 지닌 것으로 확인된 사람에게는 면역 여권을 발행하고 통행의 자유를 보장하자! 
+
+맞는 말일까? 좀 따져보자. 그 전에 용어부터 정리하자. 
+
+### 민감도와 특이도 
+
+민감도는 실제로 양성인 사람을 양성으로 판정하는 비율이다. 특이도는 실제로 음성인 사람을 음성으로 판정하는 비율이다. 정의는 다음과 같다. 
+
+\begin{align*}
+\text{sensitivity} = \frac{\text{TP}}{\text{TP + FN}}\\
+\text{specificity} = \frac{\text{TN}}{\text{TN + FP}}
+\end{align*}
+
+식을 잘 보자. 민감도란 실제로 양성을 갖고 있는 존재(TP+FN) 중에서 양성으로 판정된 존재(TP)의 비율이다. 특이도는 실제로 음성을 갖고 있는 존재(TN+FP) 중에서 음성으로 판정된 존재(TN)의 비율이다. 그렇다면, 이 1에서 이 두 값을 뺀 수치는 어떻게 정의될까?
+
+\begin{align*}
+\text{FN rate} & = 1 -  \frac{\text{TP}}{\text{TP + FN}} = \frac{\text{FN}}{\text{TP + FN}}\\
+\text{FP rate} & = 1 - \frac{\text{TN}}{\text{TN + FP}} = \frac{\text{FP}}{\text{TN + FP}}
+\end{align*}
+
+민감도는 미탐률(false negative rate)과 연결되고, 특이도는 오탐률(false positive rate)과 연결된다. 
+
+### 가정 
+- 검사 대상은 100 만명이다. 
+- 면역력을 지닌 인구의 비율이 3%이다. 
+
+### 사고 실험
+- 면역을 지닌 사람의 비율은 3만 명이다. 
+- 3만명 중에서 95%인 28,500 명이 면역을 지닌 것(양성)으로 판정된다. 
+- 나머지 97만 명의 비면역력자 중에서 5%인 48,500명이 면역을 지닌 것(양성)으로 판정된다. 
+- 면역력이 있는 것으로 판정된 사람 7.5만 명 중에서 약 62%가 가짜 면역자다. 
+
+이들이 자유롭게 활보하게 두는 것이 타당한 정책일까? 
+
+## 베이즈 정리의 함정 II 
+
+책에서는 보다 교묘한 사례가 소개되어 있다. 이게 더 흥미롭다. 주장은 이렇다. 코로나 검사에서 양성이 나왔다고 해도 이는 오탐(false positive)일 가능성이 높다. 따라서 검사 결과의 양성 사례가 늘어난다고 해도 크게 긴장한 필요는 없다. 
+
+이 주장은 베이즈 정리를 활용한다. 앞서 언급했듯이 베이즈 정리는 기저 확률에 크게 영향을 받는다. 위와 같이 어떤 주장의 중요성을 줄이고 싶다면 기저 확률을 크게 낮추면 된다.
+
+### 가정 
+- 전체 인구에서 코로나 감염자의 비율은 0.1%이다. 
+- 민감도는 90%, 특이도는 99%이다. 
+
+### 사고 실험 
+- 100만 명을 검사한다고 하자. 
+- 실제 감염자는 1,000명이다. 
+    - 민감도에 따르면 900명이 양성으로 판정된다.
+- 비감염자는 999,000명이다. 
+    - 특이도에 따르면 989,010명이 음성으로 판정된
+    - 양성 판정은 9,990명이다.
+- 양성판정자(900+9,990) 중에서 실제 감염자는 900명이므로 이는 약 8.3%에 불과하다. 
+
+이는 맞는 주장일까? 
+
+### 가정 재검토 I
+- 전체 인구에서 코로나 감염자의 비율은 0.1%라는 주장을 맞을 수 있다. 
+- 검사자 100만 명을 무작위 추출한 것이라면 위의 주장이 맞을 수 있다. 하지만 보통 코로나 검사는 의심할 만한 맥락이 존재하는 경우에 받게 된다. 검염자가 1%라고 가정하자. 
+
+### 사고 실험
+- 감염자 중 양성판정자는 9,000명 
+- 비감염자 중 영성판정자는 9,900명     
+- 거의 50%에 가까운 숫자가 감염자가 된다. 
+- 감염자가 10%라고 가정하자. 
+    - 양성 결과의 90%가 감염자가 된다. 
+
+### 가정 재검토 II 
+- 특이도가 99%라는 주장은 타당한가? 이는 오탐률이 1%라는 이야기이다.
+- 그런데 실제 데이터를 보면 전체 피검사자 중에서 양성이 나올 비율은 0.05%에 불과하다. 
+- 오탐률이 이 숫자를 넘을 수는없다. 오탐률이 0.05% 혹은 특이도가 99.95% 그리고 감염자 비율 0.1%를 가정하면, 양성 결과 중 거짓은 35% 정도로 떨어진다. 
+
+
+
+
+
