--- a/posts/stats-simple/2024-02-28-baysian-trick.qmd
+++ b/posts/stats-simple/2024-02-28-baysian-trick.qmd
@@ -31,7 +31,7 @@ P(A|B) = \underbrace{\frac{P(B|A)}{P(B)}}_{(*)} {P(A)}
 간단한 예를 들어보자. $A$는 "갑돌이가 범인"이라는 사건이고, $B$는 범행 현장의 유전자 감식 결과 감돌이의 유전자가 식별된 사건이라고 하자. 보통 유전자 감식의 정확도는 99.999999%라고 하자. 이때 $B$라는 사건의 발생이 갑돌이가 범인일 확률을 얼마나 확정할까? 위 식에서 보면 애초에 갑돌이가 범인이 되는 사건의 확률 $P(A)$가 중요하다. 증거에 따른 업데이트 부분 $(*)$이 굉장히 큰 값이라고 해도, $P(A)$의 값이 충분히 0에 가깝다면 $P(A|B)$의 값은 여전히 작을 것이다.
 
 :::{.column-margin}
-극단적인 예를 들어보자. 만일 갑돌이가 10년 전에 죽은 인물이라면? 이때 $P(A)$는 0이다. 그렇다면 $P(A|B)$는 어떻게 될까? 위 식에서 보면, $P(B|A)$가 1에 가깝다고 해도 $P(A|B)$는 0이다.
+극단적인 예를 들어보자. 만일 갑돌이가 10년 전에 죽은 인물이라면? 이때 $P(A)$는 0이다. 그렇다면 $P(A|B)$는 어떻게 될까? 위 식에서 보면, $(*)$이 엄청나게 큰 값이라고 해도, 유한하다면, $P(A|B)$는 0이다.
 :::
 
 또 하나 기억해야 하는 사실이 있다. 당연하지만, $P(A|B) \neq P(B|A)$이다. 식으로 보면 자명하지만 자연어 진술 속에서는 의외로 이 사실이 무시되고는 한다. 
