--- a/posts/stats-simple/2024-02-28-baysian-trick.qmd
+++ b/posts/stats-simple/2024-02-28-baysian-trick.qmd
@@ -64,17 +64,17 @@ P(A|B) = \underbrace{\frac{P(B|A)}{P(B)}}_{(*)} {P(A)}
 - 검사 대상은 100 만명이다. 
 - 면역력을 지닌 인구의 비율이 3%이다. 
 
-### 사고 실험
+### 베이즈 정리 활용
 - 면역을 지닌 사람의 비율은 3만 명이다. 
-- 3만명 중에서 95%인 28,500 명이 면역을 지닌 것(양성)으로 판정된다. 
-- 나머지 97만 명의 비면역력자 중에서 5%인 48,500명이 면역을 지닌 것(양성)으로 판정된다. 
+- 3만 명 중에서 95%인 28,500 명이 면역을 지닌 것(양성)으로 판정된다. 
+- 나머지 97만 명의 비면역자 중에서 5%인 48,500명이 면역을 지닌 것(양성)으로 판정된다. 
 - 면역력이 있는 것으로 판정된 사람 7.5만 명 중에서 약 62%가 가짜 면역자다. 
 
-이들이 자유롭게 활보하게 두는 것이 타당한 정책일까? 
+검사 결과 면역을 지녔다고 나온다면, 자유롭게 활보하게 두는 것이 괜찮은 정책일까? 
 
 ## 베이즈 정리의 함정 II 
 
-책에서는 보다 교묘한 사례가 소개되어 있다. 이게 더 흥미롭다. 주장은 이렇다. 코로나 검사에서 양성이 나왔다고 해도 이는 오탐(false positive)일 가능성이 높다. 따라서 검사 결과의 양성 사례가 늘어난다고 해도 크게 긴장한 필요는 없다. 
+책에는 보다 교묘한 사례가 소개되어 있다. 이게 더 흥미롭다. 주장은 이렇다. 코로나 검사에서 양성이 나왔다고 해도 이는 오탐(false positive)일 가능성이 높다. 따라서 검사 결과의 양성 사례가 늘어난다고 해도 크게 긴장한 필요는 없다. 
 
 이 주장은 베이즈 정리를 활용한다. 앞서 언급했듯이 베이즈 정리는 기저 확률에 크게 영향을 받는다. 위와 같이 어떤 주장의 중요성을 줄이고 싶다면 기저 확률을 크게 낮추면 된다.
 
@@ -82,32 +82,37 @@ P(A|B) = \underbrace{\frac{P(B|A)}{P(B)}}_{(*)} {P(A)}
 - 전체 인구에서 코로나 감염자의 비율은 0.1%이다. 
 - 민감도는 90%, 특이도는 99%이다. 
 
-### 사고 실험 
+### 베이즈 정리 활용
 - 100만 명을 검사한다고 하자. 
 - 실제 감염자는 1,000명이다. 
     - 민감도에 따르면 900명이 양성으로 판정된다.
 - 비감염자는 999,000명이다. 
-    - 특이도에 따르면 989,010명이 음성으로 판정된
+    - 특이도에 따르면 989,010명이 음성으로 판정된다. 
     - 양성 판정은 9,990명이다.
 - 양성판정자(900+9,990) 중에서 실제 감염자는 900명이므로 이는 약 8.3%에 불과하다. 
 
-이는 맞는 주장일까? 
+이는 타당한 주장일까? 
 
 ### 가정 재검토 I
-- 전체 인구에서 코로나 감염자의 비율은 0.1%라는 주장을 맞을 수 있다. 
-- 검사자 100만 명을 무작위 추출한 것이라면 위의 주장이 맞을 수 있다. 하지만 보통 코로나 검사는 의심할 만한 맥락이 존재하는 경우에 받게 된다. 검염자가 1%라고 가정하자. 
+- 전체 인구 중 코로나19 감염자의 비율이 0.1%라는 주장이 맞다고 치자. 
+- 하지만 검사자에 대해서고 그럴까? 검사자 100만 명을 무작위 추출한 것이라면 0.1%라고 봐도 좋겠다. 그러나 코로나 검사는 의심할 만한 맥락이 존재하는 경우에 받게 된다. 
+- 이렇게 조사 받은 100만 명 중에서 검염자가 1%라고 다시 가정하자. 
 
-### 사고 실험
+### 베이즈 정리 응용 
 - 감염자 중 양성판정자는 9,000명 
-- 비감염자 중 영성판정자는 9,900명     
-- 거의 50%에 가까운 숫자가 감염자가 된다. 
-- 감염자가 10%라고 가정하자. 
-    - 양성 결과의 90%가 감염자가 된다. 
+- 비감염자 중 양성판정자는 9,900명     
+- 양성판정자 중에서 거의 50%에 가까운 숫자가 감염자가 된다. 
+- 감염자가 10%라고 가정한다면?
+    - 양성판정자의 90%가 감염자이다! 
 
 ### 가정 재검토 II 
 - 특이도가 99%라는 주장은 타당한가? 이는 오탐률이 1%라는 이야기이다.
 - 그런데 실제 데이터를 보면 전체 피검사자 중에서 양성이 나올 비율은 0.05%에 불과하다. 
-- 오탐률이 이 숫자를 넘을 수는없다. 오탐률이 0.05% 혹은 특이도가 99.95% 그리고 감염자 비율 0.1%를 가정하면, 양성 결과 중 거짓은 35% 정도로 떨어진다. 
+- 오탐률이 이 숫자보다 클 수는 없다. 가능한 가장 큰 오탐률 0.05%를 가정하자. 이는 특이도가 99.95%라는 뜻이기도 하다.  
+- 감염자 비율 0.1%를 가정하자. 
+
+### 베이즈 정리 응용
+- 양성 결과를 받은 사람 중에서 65%가 실제 감염자이다. 
 
 
 
