--- a/posts/stats-simple/2024-02-28-baysian-trick.qmd
+++ b/posts/stats-simple/2024-02-28-baysian-trick.qmd
@@ -112,7 +112,9 @@ P(A|B) = \underbrace{\frac{P(B|A)}{P(B)}}_{(*)} {P(A)}
 - 감염자 비율 0.1%를 가정하자. 
 
 ### 베이즈 정리 응용
-- 양성 결과를 받은 사람 중에서 65%가 실제 감염자이다. 
+- 감염자 1,000 명에서 민감도에 따라서 900 명이 양성 판정된다. 
+- 비감염자 999,000 명에 특이도(0.05%)를 곱하면 약 500명이 양성 판정된다. 
+- 양성 결과를 받은 사람 중에서 약 65%가 실제 감염자이다. 
 
 
 
