--- a/posts/stats-simple/2024-02-28-baysian-trick.qmd
+++ b/posts/stats-simple/2024-02-28-baysian-trick.qmd
@@ -75,8 +75,7 @@ P(A|B) = \underbrace{\frac{P(B|A)}{P(B)}}_{(*)} {P(A)}
 - 97만 명의 비면역자 중에서 5%인 48,500명이 면역을 지닌 것(FP)으로 판정된다. 이들은 FP이다. 
 - 면역력이 있는 것으로 판정된 사람 7.7만 명 중에서 약 38%($\frac{\text{TP}}{\text{TP + FP}}$)만 진짜 면역자다. 
 
-여기서 활용된 지표는 정밀도(precision)이다. 정밀도는 양성 판정 중에서 실제 양성인 비율이다. 이 지표는 민감도와 특이도의 조합으로 이루어진다.
-면역 검사 결과 양성 판정을 받았다고 자유로운 이동을 허락하는 것이 효과적인 방역 정책일까?
+여기서 활용된 지표는 정밀도(precision)이다. 정밀도는 양성 판정 중에서 실제 양성인 비율이다. 면역 검사 결과 양성 판정을 받았다고 자유로운 이동을 허락하는 것이 효과적인 방역 정책일까?
 
 ## 베이즈 정리의 함정 II 
 
