--- a/posts/computer-tool/2025-02-08-github-actions-with-uv.qmd
+++ b/posts/computer-tool/2025-02-08-github-actions-with-uv.qmd
@@ -13,7 +13,7 @@ draft: false
 ## TL; DR
 GitHub Actions와 uv를 활용해 GiHub Pages 자동 빌드 및 배포 환경을 구축해보자. 
 
-## 문제
+## 문제; 왜 GitHub Actions에 uv를 올리고자 하는가?
 
 다음과 같은 툴로 (몹시 개인적인) 대시보드를 개발하고 배포한다고 고민해보자. 
 
@@ -27,7 +27,7 @@ GitHub Actions와 uv를 활용해 GiHub Pages 자동 빌드 및 배포 환경을
 - 로컬 개발 환경에서는 uv, quarto, python을 활용한다. 
 - 데이터 업데이트와 배포는 GitHub Actions를 활용한다. 
 
-보통 GitHub Actions는 배포환경이 제한되기 때문에 `requirements.txt`를 활용해 패키지를 설치하고 사용한다. 그런데 uv를 활용하면 개발에서 썼던 가상환경을 그대로 쓸 수 있다. 이를 활용해 개발 환경과 배포 환경을 맞출 수 있다.
+보통 GitHub Actions는 배포 환경이 제한되기 때문에 `requirements.txt`를 활용해 패키지를 설치하고 사용한다. 통상적으로 conda 등의 가상 환경이 무겁거나 느린 것도 사실이다. 그런데 uv라면 어떨까? uv 정도로 가볍고 빠른 환경이라면 개발에서 썼던 가상환경을 그대로 쓰는 것도 가능할 듯 싶다. 
 
 ## GitHub Actions에서 uv 쓰기 
 
