문서 업데이트: GitHub Actions 관련 내용 수정 및 가상 환경 경로 설정 설명 개선

--- a/posts/computer-tool/2025-02-08-github-actions-with-uv.qmd
+++ b/posts/computer-tool/2025-02-08-github-actions-with-uv.qmd
@@ -106,7 +106,7 @@ jobs:
 
 스크립트의 핵심은 uv를 설치한 후 가상환경의 변수를 quarto 환경으로 넘겨주는 대목이다. 
 
-- `34--35`: 가상 환경 경로를 설정하고 이를 환경 변수로 지정한다. 
+- `34-35`: 가상 환경 경로를 설정하고 이를 환경 변수로 지정한다. 
 - `46`: Quarto에서 publish를 실행할 때 가상 환경을 활성화한다.
 
 ## Github Pages 설정 
