--- a/posts/computer-tool/2024-09-05-first-thing-ubuntu-updated.qmd
+++ b/posts/computer-tool/2024-09-05-first-thing-ubuntu-updated.qmd
@@ -61,4 +61,4 @@ uv에 관한 소개는 [LINK](https://blog.lostineconomics.com/posts/computer-to
 > uv add jupyter pandas polars matplotlib koreanize_matplotlib # 가상 환경 의존성 추가 
 ```
 
-가상 환경이 현재 위치의 `.venv` 폴더 아래 생성되고, 그 안에 필요한 패키지들이 설치된다. 설치와 제거가 간단하므로 파이썬 프로젝트를 시작할 때마다 이 과정을 해주는 편이 오히려 좋다.
+가상 환경이 현재 위치의 `.venv` 폴더 아래 생성되고, 그 안에 필요한 패키지들이 설치된다. 설치와 제거가 간단하므로 파이썬 프로젝트를 시작할 때마다 이 과정을 해주는 것이 여러모로 낫다. 전체 환경을 하나 설정하지 말로 프로젝트 별로 안심하고 이렇게 저렇게 삽질하면서 써보는 것이 좋다는 뜻이다.  
