--- a/posts/computer-tool/2025-02-08-github-actions-with-uv.qmd
+++ b/posts/computer-tool/2025-02-08-github-actions-with-uv.qmd
@@ -27,19 +27,14 @@ GitHub Actions와 uv를 활용해 GiHub Pages 자동 빌드 및 배포 환경을
 
 - 로컬 개발 환경에서는 uv, quarto, python(jupyter)을 활용해 개발한다. 
 - 데이터 업데이트와 배포는 GitHub Actions를 활용해 자동화한다.
+  - 이떄 개발 환경에서 uv로 설정한 가상 환경을 Actions에서 그대로 활용한다. 
 - Static 페이지 배포는 GitHub Pages를 활용한다. 
 
-보통 GitHub Actions는 배포 환경이 제한되기 때문에 `requirements.txt`를 활용해 원시적인 방식으로 의존성을 확보하고는 했다. conda 등 많이 쓰는 가상 환경이 무겁거나 느린 것도 Actions에서의 활용을 꺼리게 만드는 요소이다. uv라면 어떨까? uv 정도로 가볍고 빠른 환경이라면 개발에서 썼던 가상환경을 그대로 쓰는 것도 가능할 듯 싶다. 
+보통 GitHub Actions는 배포 환경이 제한되기 때문에 `requirements.txt`를 활용해 pip로 의존성을 확보하고는 했다. conda 등 많이 쓰는 가상 환경이 무겁거나 느린 것도 Actions에서의 활용을 꺼리게 만드는 요소이다. uv라면 어떨까? uv 정도로 가볍고 빠르고 유연한 환경이라면, 개발에서 썼던 가상환경을 그대로 쓰는 것도 가능할 듯 싶다. 
 
 ## GitHub Actions에서 uv 쓰기 
 
-uv를 활용은 간단하다. [여기](https://docs.astral.sh/uv/guides/integration/github/)에서 보듯이 다른 actions 설정과 비슷하게 쓰면 된다. 정작 헤맨 것은 Actions의 다른 단계에서 uv의 가상 환경을 활성화하는 방법이다.
-
-### 개발 환경 
-
-- 보통 함수 등의 기능을 Jupyter에서 테스트해가며 개발한다. 
-- 이때 활상화한 venv 환경을 그대로 활용하고 싶다. 
-- 이 venv 환경이 quarto 배포까지 이어져야 한다.  
+Actions에서 간단히 uv를 활용할 수 있다. [여기](https://docs.astral.sh/uv/guides/integration/github/)에서 보듯이 다른 actions 설정과 비슷하게 쓰면 된다. 정작 헤맨 것은 Actions의 다른 단계에서 uv의 가상 환경을 활성화하는 방법이다.
 
 ## uv 활성화를 위한 actions 스크립트 설정 
 
@@ -112,7 +107,7 @@ jobs:
 
 ## Github Pages 설정 
 
-마지막으로 GitHub Pages 설정을 아래 그림처럼 해주어야 한다. branch에서 Pages를 배포하며 배포할 브랜치를 `gh-pages`로 설정한다.
+마지막으로 GitHub Pages 설정을 아래 그림처럼 해주어야 한다. Git branch에서 Pages를 배포하며 배포할 브랜치를 `gh-pages`로 설정한다.
 
 :::{layout="[[-0.2, 1, -0.2]]"}
 ![GitHub Pages 설정](./images/github-pages-01.png){#fig-1}
