Add syntax highlighting styles for Quarto and update sitemap and content
- Added new CSS files for syntax highlighting in light and dark themes.
- Updated the last modified dates in sitemap.xml for improved SEO.
- Revised content in the Bayesian Trick post for clarity and accuracy.

--- a/posts/stats-simple/2024-02-28-baysian-trick.qmd
+++ b/posts/stats-simple/2024-02-28-baysian-trick.qmd
@@ -35,7 +35,7 @@ P(H|E) = \underbrace{\frac{P(E|H)}{P(E)}}_{(*)} {P(H)}
 
 이 사례는 언술에 의한 조건부 확률과 실제 관심을 두어야 하는 조건부 확률이 다를 수 있음을 보여준다. 즉, $P(E|H)$이 높다고 해서 $P(H|E)$가 항상 높은 것은 아니다. 형사법의 정의는 어떤 진실 혹은 어떤 확률을 추구해야 할까? 보통 법정에서는 $P(E|H)$가 강하게 주장된다. 하지만 법적인 정의를 반영하는 것은 $P(H|E)$가 아닐까? 
 
-다른 경우를 하나 더 살펴보자. $P(E)$가 꽤 낮다고 하자. 그리고 $P(E) \approx P(H)$라고 하자. 두 값이 서로 상쇄되면, $P(H|E) = P(E|H)$가 된다. 말로 풀어보자. 새로운 증거가 발견되어 가설이 참일 확률과 가설이 참일 때 새로운 증거가 발견될 확률이 같게 된다. 이때 $P(E|H)$의 값이 상당히 크다면? 앞서 $P(E)$, $P(H)$는 낮다고 했다. 그런데 $P(E|H)$ 값이 크다면 $P(H|E)$도 같이 커지게 된다. 즉, 일반적으로 가설이 참일 확률($P(H)$)은 낮지만, 증거가 주어지면 가설이 참일 확률이 급격히 높아질 수 있다.  
+다른 경우를 하나 더 살펴보자. $P(E)$가 꽤 낮다고 하자. 그리고 $P(E) \approx P(H)$라고 하자. 두 값이 서로 상쇄되면, $P(H|E) = P(E|H)$가 된다. 말로 풀어보자. 새로운 증거가 발견되어 가설이 참일 확률과 가설이 참일 때 새로운 증거가 발견될 확률이 같게 된다. 이때 $P(E|H)$의 값이 상당히 크다면? 앞서 $P(E)$, $P(H)$는 낮다고 했다. 그런데 $P(E|H)$ 값이 크다면 $P(H|E)$도 같이 커지게 된다. 즉, 일반적으로 가설이 참일 확률($P(H)$)은 낮지만, 증거가 주어지면 가설이 참일 확률이 급격하게 높아질 수 있다. 이 경우라면 $P(H|E) \approx P(E|H)$를 주장할 수 있다. 
 
 ## 베이즈 정리의 함정 I
 
