--- a/posts/stats-simple/2024-02-28-baysian-trick.qmd
+++ b/posts/stats-simple/2024-02-28-baysian-trick.qmd
@@ -112,7 +112,7 @@ P(H|E) = \underbrace{\frac{P(E|H)}{P(E)}}_{(*)} {P(H)}
 - 하지만 검사자에 대해서도 그럴까? 검사자 100만 명을 무작위 추출한 것이라면 0.1%라고 봐도 좋다. 그러나 코로나 검사는 의심할 만한 맥락이 존재하는 경우에 받게 된다. 이 경우 감염자 비율이 0.1%보다 높을 가능성이 높다.
 - 이를 고려해서 100만 명 중에서 검염자가 1%라고 새롭게 가정하자. 
 
-### 베이즈 정리 응용 
+#### 변화된 가정 아래 베이즈 정리 활용
 - 감염자 중 양성판정자는 9,000명(TP)
 - 비감염자 중 양성판정자는 9,900명(FP)   
 - 양성판정자(TP+FP) 중에서 거의 50%($\frac{\text{TP}}{\text{TP+FP}}$)가 실제 감염자이다. 
@@ -125,7 +125,7 @@ P(H|E) = \underbrace{\frac{P(E|H)}{P(E)}}_{(*)} {P(H)}
 - 오탐률이 이 숫자보다 클 수는 없다. 가능한 가장 큰 오탐률 0.05%를 가정하자. 이는 특이도가 99.95%라는 뜻이기도 하다.  
 - 감염자 비율은 원래 값 0.1%를 가정하자. 
 
-### 베이즈 정리 응용
+#### 변화된 가정 아래 베이즈 정리 활용
 - 감염자 1,000 명에서 민감도에 따라서 900 명이 양성 판정(TP) 
 - 비감염자 999,000 명에 특이도(0.05%)를 곱하면 약 500명이 양성 판정(FP) 
 - 양성 결과를 받은 사람 중에서 약 65%가 실제 감염자이다. 
