--- a/posts/stats-simple/2024-02-28-baysian-trick.qmd
+++ b/posts/stats-simple/2024-02-28-baysian-trick.qmd
@@ -13,7 +13,7 @@ categories: [statistics, stats-simple]
 
 ## 베이즈 정리의 핵심 
 
-베이즈 정리는 조건부 확률을 다루는 데에 있어서 중요한 개념이다. 이는 두 사건 H, E에 대해 다음과 같이 정의된다. 여기서 H, E를 쓰는 이유는 다음과 같다. H는 hypothesis, E는 evidence를 의미한다. 
+베이즈 정리는 조건부 확률을 다루는 데에 있어서 중요한 개념이다. 이는 두 사건 $H, E$에 대해 다음과 같이 정의된다. 여기서 $H, E$를 쓰는 이유는 다음과 같다. $H$는 hypothesis, $E$는 evidence를 의미한다. 
 
 \begin{align*}
 P(H|E) = \frac{P(E|H)P(H)}{P(E)}
@@ -25,7 +25,7 @@ P(H|E) = \frac{P(E|H)P(H)}{P(E)}
 P(H|E) = \underbrace{\frac{P(E|H)}{P(E)}}_{(*)} {P(H)}
 \end{align*}
 
-이렇게 보면, $E$라는 새로운 증거가 주어졌을 때 가설 H가 맞을 확률 업데이트하는 일종의 룰이다. 이 룰을 보여주는 것이 $(*)$ 부분이다. $(*)$을 직관적으로 이해하기는 쉽지 않다. $P(E)=1$을 가정한다면 $(*)$는 H가 E에 미치는 영향력 정도로 볼 수 있다. 이를 기준으로 생각해보면 $P(E)$의 값이 줄어들수록 H가 E에 미치는 영향력이 커지게 된다. 
+이렇게 보면, $E$라는 새로운 증거가 주어졌을 때 가설 $H$가 맞을 확률 업데이트하는 일종의 룰이다. 이 룰을 보여주는 것이 $(*)$ 부분이다. $(*)$을 직관적으로 이해하기는 쉽지 않다. $P(E)=1$을 가정한다면 $(*)$는 H가 E에 미치는 영향력 정도로 볼 수 있다. 이를 기준으로 생각해보면 $P(E)$의 값이 줄어들수록 H가 E에 미치는 영향력이 커지게 된다. 
 
 많이 활용되는 흥미로운 예를 들어보자. $H$는 "갑돌이가 범인"이라는 수사 기간의 결론, $E$는 범행 현장의 유전자 감식 결과 감돌이의 유전자가 식별된 증거라고 하자. 보통 유전자 감식의 정확도는 99.999999%라고 하자. 이때 E라는 증거가 갑돌이가 범인일 확률을 얼마나 확정할까? 위 식에서 보면 애초에 갑돌이가 범인이 되는 사건의 확률 $P(H)$가 중요하다. 증거에 따른 업데이트인 $(*)$이 굉장히 큰 값이라고 해도, $P(H)$의 값이 충분히 0에 가깝다면 $P(H|E)$의 값은 여전히 작을 것이다. 
 
@@ -35,7 +35,7 @@ P(H|E) = \underbrace{\frac{P(E|H)}{P(E)}}_{(*)} {P(H)}
 
 이 사례는 언술에 의한 조건부 확률과 실제 관심을 두어야 하는 조건부 확률이 다를 수 있음을 보여준다. 즉, $P(E|H)$이 높다고 해서 $P(H|E)$가 항상 높은 것은 아니다. 형사법의 정의는 어떤 진실 혹은 어떤 확률을 추구해야 할까? 보통 법정에서는 $P(E|H)$가 강하게 주장된다. 하지만 법적인 정의를 반영하는 것은 $P(H|E)$가 아닐까? 
 
-다른 경우를 하나 더 살펴보자. $P(E) \approx P(H)$라고 하자. 두 값이 서로 상쇄되어 $P(H|E) = P(E|H)$가 된다. 이 경우라면 $P(H|E) \approx P(E|H)$를 주장할 수 있다. 흥미로운 경우는 4P(E)$, $P(H)$는 낮고, $P(E|H)$는 큰 경우다. 일반적으로 가설이 참일 확률($P(H)$)은 낮지만, 증거가 주어지면 가설이 참일 확률이 급격하게 높아진다. 이것이 베이즈 업데이트가 작동하는 방식이다.  
+다른 경우를 하나 더 살펴보자. $P(E) \approx P(H)$라고 하자. 두 값이 서로 상쇄되어 $P(H|E) = P(E|H)$가 된다. 이 경우라면 $P(H|E) \approx P(E|H)$를 주장할 수 있다. 흥미로운 경우는 $P(E)$, $P(H)$는 낮고, $P(E|H)$는 큰 경우다. 일반적으로 가설이 참일 확률($P(H)$)은 낮지만, 증거가 주어지면 가설이 참일 확률이 급격하게 높아진다. 이것이 베이즈 업데이트가 작동하는 방식이다.  
 
 ## 베이즈 정리의 함정 I
 
