Update Bayesian trick post with additional examples and revise last modified dates

--- a/posts/stats-simple/2024-02-28-baysian-trick.qmd
+++ b/posts/stats-simple/2024-02-28-baysian-trick.qmd
@@ -40,6 +40,29 @@ P(H|E) = \underbrace{\frac{P(E|H)}{P(E)}}_{(*)} {P(H)}
 극단적인 예를 들어보자. 만일 갑돌이가 사건 발생 10년 전에 사망한한 인물이라면? 이때 $P(A)$는 0이다. 그렇다면 $P(A|B)$는 어떻게 될까? 위 식에서 보면, $(*)$이 엄청나게 큰 값이라고 해도, 유한하다면, $P(A|B)$는 0이다.
 :::
 
+### 고전적인 예시 
+
+- $H$: 어떤 질병에 감염되었다. 
+- $E$: 양성 판정이 나왔다.
+
+우리가 알고 싶은 것은 $P(H|E)$이다. 이를 베이즈 정리로 계산해보자. 
+
+$$
+P(H|E) = \frac{P(E|H)}{P(E)}P(H)
+$$
+
+- $P(H)$: 1% (유병률)
+- $P(E|H)$: 99% (뒤에서 보겠지만 이를 민감도라고 한다)
+- $P(E|\neg H)$: 5% (오탐율)
+- $P(E)$: $P(E|H)P(H) + P(E|\neg H)P(\neg H)$
+- $P(E)$: $0.99 \times 0.01 + 0.05 \times 0.99 = 0.0594$
+
+이제 계산을 해보자. 
+
+$$
+P(H|E) = \frac{0.99}{0.0594}0.01 = 0.167
+$$
+
 이 사례는 언술에 의한 조건부 확률과 실제 관심을 두어야 하는 조건부 확률이 다를 수 있음을 보여준다. 즉, $P(E|H)$이 높다고 해서 $P(H|E)$가 항상 높은 것은 아니다. 형사법의 정의는 어떤 진실 혹은 어떤 확률을 추구해야 할까? 보통 법정에서는 $P(E|H)$가 강하게 주장된다. 하지만 법적인 정의를 반영하는 것은 $P(H|E)$가 아닐까? 
 
 다른 경우를 하나 더 살펴보자. $P(E) \approx P(H)$라고 하자. 두 값이 서로 상쇄되어 $P(H|E) = P(E|H)$가 된다. 이 경우라면 $P(H|E) \approx P(E|H)$를 주장할 수 있다. 흥미로운 경우는 $P(E)$, $P(H)$는 낮고, $P(E|H)$는 큰 경우다. 일반적으로 가설이 참일 확률($P(H)$)은 낮지만, 증거가 주어지면 가설이 참일 확률이 급격하게 높아진다. 이것이 베이즈 업데이트가 작동하는 방식이다.  
