Update Bayesian Trick Post and Sitemap
- Revised the text in the Bayesian Trick post for clarity and accuracy, specifically in the explanation of Bayes' theorem and its implications.
- Updated the last modified date in the sitemap for the Bayesian Trick post to reflect the latest changes.
- Clarified terminology in the Bayesian Trick post, changing "오탐율" to "특이도" for better understanding.

--- a/posts/stats-simple/2024-02-28-baysian-trick.qmd
+++ b/posts/stats-simple/2024-02-28-baysian-trick.qmd
@@ -52,8 +52,8 @@ P(H|E) = \frac{P(E|H)}{P(E)}P(H)
 $$
 
 - $P(H)$: 1% (유병률)
-- $P(E|H)$: 99% (뒤에서 보겠지만 이를 민감도라고 한다)
-- $P(E|\neg H)$: 5% (오탐율)
+- $P(E|H)$: 99% (이를 민감도라고 한다. 혹은 1-미탐율)
+- $P(E|\neg H)$: 5% (이를 특이도라고 한다. 혹은 1-오탐율)
 - $P(E)$: $P(E|H)P(H) + P(E|\neg H)P(\neg H)$
 - $P(E)$: $0.99 \times 0.01 + 0.05 \times 0.99 = 0.0594$
 
