--- a/posts/today-i/2025-12-31-TIW-2025.qmd
+++ b/posts/today-i/2025-12-31-TIW-2025.qmd
@@ -30,7 +30,8 @@ TIW 2025 버전. 수시로 바뀐다.
 
 - 아마도 유교가 (과거 제도라는 능력주의 기반의) 관료제와 잘 결합할 수 있었던 것은 이러한 맥락이 아닐까 싶다. 유교에서 강조하는 신의, 충성 등의 개념이 과거(인재 선발) - 관료제(엘리트의 국가 경영)과 잘 맞아 떨어졌기 때문. 
 - 경제학에서는 시그널링 이론을 통해서 이른바 시험, 학위 등이 사회적으로 수행하는 역할을 다른 각도로 본다. 즉, 시험이나 학위는 개인의 능력을 평가하는 것이 아니라, 해당 직무나 업무에 걸맞는 자질을 갖추었는지를 평가한다는 것이다. 즉 시험은 개인이 지닌 추상적인 '능력'을 평가하지 않는다. 대신 조직, 체제가 요구하는 어떤 기능에 적합한지 여부를 가려낸다. 
-- 과거 제도와 이를 통해 생산되는 능력주의라는 이데올로기는 시그널링 이론의 좋은 사례일지 모른다. 관료제 사회의 보다 적극적으로 잘 순응할 수 있는 사람들을 골라내고 이들은 다시 관료로 등용함으로써 체제가 강화된다. 
+- 과거 제도와 이를 통해 생산되는 능력주의라는 이데올로기는 시그널링 이론의 좋은 사례일지 모른다. 보다 적극적으로 잘 순응할 수 있는 사람들을 골라내고 이들은 다시 관료로 등용함으로써 관료제라는 체제가 강화된다. 
+- 기존 시그널링 이론이 교육이 (측정 가능한) 능력을 강화하는 것이냐 아니면 원래 지닌 자질을 입증하는 것이냐의 논쟁 축이라면, Peng Peng 교수의 주장은 교육이 지닌 체제 강화적인 기능을 강조한다. 즉, 교육은 단순히 개인의 능력을 계발 혹은 평가하는 것이 아니라, 체제에 적합한 인재를 선발하고 이들을 통해 체제를 강화하는 역할을 한다는 것이다.
 
 ## 범죄율 감소 | 2025-05-16
 
