--- a/posts/today-i/2025-12-31-TIL-2025.qmd
+++ b/posts/today-i/2025-12-31-TIL-2025.qmd
@@ -3,7 +3,7 @@ title: "Today I Learned 2025"
 description: 2025년에 배운 소소한 무엇  
 author: "JS HUHH"
 date: "12/31/2025"
-image: "./images/cats-til.png"
+image: "./images/cats-til-2.jpg"
 categories: [taday-i-do]
 lightbox: auto
 #jupyter: python3
