--- a/posts/today-i/2025-12-31-TIW-2025.qmd
+++ b/posts/today-i/2025-12-31-TIW-2025.qmd
@@ -3,7 +3,7 @@ title: "Today I Wrote 2025"
 description: 2025년에 끄적인 뭔가 
 author: "JS HUHH"
 date: "12/31/2025"
-image: "./images/cats-tiw.png"
+image: "./images/cats-tiw-2.jpg"
 categories: [taday-i-do]
 lightbox: auto
 #jupyter: python3
