Update last modified dates and clarify terminology in TIL 2025 post and sitemap

--- a/posts/today-i/2025-12-31-TIL-2025.qmd
+++ b/posts/today-i/2025-12-31-TIL-2025.qmd
@@ -23,8 +23,8 @@ TIL 2025 버전. 수시로 바뀐다.
   - 영업, 마케팅, 관리, 기획, 재무, 인사 등 사무직 직원의 급여, 상여금, 각종 수당
   - 복리 후생비 
   - 감가 상각비, 무형자산 상각비
-- 영업외비용 (Non-Operating Expenses): 기업의 주된 영업활동과 관련 없이 발생하는 비용 (예: 이자 비용, 외환차손, 투자자산 처분손실, 재해손실 등)
-- 법인세 비용 (Income Tax Expense): 기업이 벌어들인 이익에 대해 국가에 납부하는 세금
+- 영업외비용 (non-operating expenses): 기업의 주된 영업활동과 관련 없이 발생하는 비용 (예: 이자 비용, 외환차손, 투자자산 처분손실, 재해손실 등)
+- 법인세 비용 (income tax expense): 기업이 벌어들인 이익에 대해 국가에 납부하는 세금
 
 ### 추가 개념 
 - 영업 비용(operating cost): COGS + 판관비 
